management-api/overlays/ocp4-stage/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: management-api-route53
spec:
    host: management.stage.thoth-station.ninja
    to:
        kind: Service
        name: management-api
        weight: 100
    tls:
        termination: ENC[AES256_GCM,data:184caw==,iv:Z2MAe/Q5DVbcbJKjQc/Mmz/qB33/75fmykb/aG8u/vw=,tag:1XPFgPL1X9nAgtA1LLLmxQ==,type:str]
        certificate: ENC[AES256_GCM,data:Eo1bxcobSl/UEM1px7MOwniIoarJKvVYplOx+OyddSSpFenLc9s+5jf3zFaflj/OaabtaicGyWmE4elR4l59LSDKDmTMYg/qCP/j9kDzEf2qhGN6ZtRSopEgGwNYJ2CUQskdANGEFDoq5Ap5OHlYpYDDSZlne5lHHTFze3VQ+CeGRi5KcFWEPFW2DenHcU9kNnWRGqQjolFTbrVFVnaUrjMWqKYjFmdmE1tpbKPtGVHCqpkjfWYdiGpbgivifUDfClyZ+rVdoPOlxD21GPUnIGlLK8r8ZHIAhJxgjiq0IGtnE5pRJIsqhvJ3ngPdqSnOdpIKCQrY4iyYM3Elzbgs0eFgWIQhLaiu2VSuyO+tQVRuTHBkP07VQSIaVFuaouCxKKQA8pMuTDGdioVeeAOVMHl39tBKSpKFfcKmoM4LdSYhdcic3vCROXRCIIxZTHtxiUQFEchTaon [...]
        key: ENC[AES256_GCM,data:tvsMdzmL9dAFHDuFiqWIApvWteb3dMrKSEADlslOifjVSyNgLL3qprViKpvxlOirUdcd+zEq5lx4wK8Y7QYZe0GqkxxZbe29+t4hxNURP8mF2/trh4STz/5FNd7/zj54L307M3/T49M0ygfMRkitZOWWAYDRGK554gmb98fkIA2k4ZoVDeSyuodC35eFQ4OAuAPJNRN6Mog+DiVwX13NAN9guQpedSUC3Y2AjiOg0QCsCu5TZAQphgO8xt4BfrF1JqC7xAfZZxdcy4JBPUNd3Td/zoWJYj0erfsjl130d9o7MUAQUNvPTpDgHO0osG8SkVD2UkOtvt10RDNJ+q1SmcJlq59iWNit2H+j56CbJG3t3CVRfalJmLrhx02kwHobsKvtBcrQaDUD7lw/IyhBI6eiT2pabnCZBjKeZSKkv9iU+OZfr4WKMj0TItBR7jxnHwq2PTthu+WPIFFSpNX [...]
        caCertificate: ENC[AES256_GCM,data:+0Gg+zB6GlwZdRCl3DjkBLrNTD8hDmWCfYd897Nz0gcsNd2udG1lxdGkTNjsTRsOE6lqqQZcdzJLPJXD3fkFqX5/oW7f9Lv9pqpKrraikNoR4N5dloQzgRyjV7d0P5Bp/vb4ImNu12ju/4JtyqrQkmb0zsEQnfgoMGU8onE03WVn/kHFEJxBfIczzmkmEa8foLGsKFwOeIcZVh39/ahEyRPvQcMWpm2NyBYDGD8s+Vy2OcbR2H69uMwVXgFAoVu1Q2pQlWHVfVAkC15zaHO5+g/umFuZF8OpXklN6+AP/Hz7tTRovF3nwat4YoA9PTJA43AnFweGgf5PE7Y0fy/Gnx2WAHI2e+UI0yXkPHbgqq4ah+MDP8X5nHJfcEbptBeUO3ODW4nlLSggTnPMnHY+8POMq25ZOh4fa+POvIlf6kQo2El3+VW5uk2e+XEW1ZmHrSdnGiaPW [...]
    wildcardPolicy: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-07-08T12:11:41Z"
    mac: ENC[AES256_GCM,data:ZNyr+wiRGke0wE8XjADe2UJYr7Ln1ZGwdBeqFfxMkSahHJWN5mhu3sVrwjOBOKNxIVzYQ3xuXjMo8AsWazPHJI164Bzh642LZDDMfsLX4dvwDdZgy1K+E2quiTFEKzIXzQmMi2S71Rz3zLRK2nF286eW9dWm68koE2E2p47wBxo=,iv:/Et9Ond9JWsOOHs0cEFz1J/j1vwmfmMHL15uNSWSWIE=,tag:rM0z7vrvurAVlDJ/FmgI7A==,type:str]
    pgp:
        - created_at: "2022-07-08T12:11:40Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYARAAl1L/jGUFijKul52sFGk5MdK8ACQyn0jQEgS8SRJHwE55
[...]
            =PrCj
            -----END PGP MESSAGE-----
          fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
        - created_at: "2022-07-08T12:11:40Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcBMA+/WpawS9RPbAQgAjsCNJ5kkmM5rqAI+SP4nezDG5G/pg7mJ2TDA8jpDzTMm
[...]
            4wo5/JTyJlTyPUV5xumZYRZo
            =rjmu
            -----END PGP MESSAGE-----
          fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
        - created_at: "2022-07-08T12:11:40Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf9F1P+s6gOdY0IC6v0dtTp7pqchOQR/GMwwEKe7n9yIAV3
[...]
            J1cXtJ8DDHzLGIMiNxzQVeJeRZLIe3Ws7IWnJfV4ZQ==
            =tGY1
            -----END PGP MESSAGE-----
          fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
        - created_at: "2022-07-08T12:11:40Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9aKBcudqifiARAAl2tPQ6FDzpj8iwcviYATh+a1ZHlMjRoVMVl3FjY9podp
[...]
            aZKd1V6Sn4/yW3aYC5lmcbrabGbEFL0ZfVA6s3/kB216JA==
            =HY18
            -----END PGP MESSAGE-----
          fp: 0508677DD04952D06A943D5B4DC4116D360E3276
        - created_at: "2022-07-08T12:11:40Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFOA9LRbhPydJmLEAgAggIJR/V5WpXSOD/AhytbCn2dnebPCWYnnkyXN3ERPHlp
[...]
            IAEll4cTZ2wLhKibZ+PBGW3zhILzb7aS9UTK3aqqTca9mEMq
            =AXvn
            -----END PGP MESSAGE-----
          fp: 8D191B7544E9CCC3547B25A877E5A5B31D13A647
        - created_at: "2022-07-08T12:11:40Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9NBwWNwg7uAAQ//XZx1xuEmoEnNyp4Y/nqCrUMbUHNrbiMA1K/QxpaCdVRC
[...]
            5i4VZvOtCJfvmQarnjg9CucHAUx2hvzAxzN39TknIkjPNw==
            =FYIi
            -----END PGP MESSAGE-----
          fp: A01778ACB7CC4D41B00FDD78CCBE624D8FF6D016
        - created_at: "2022-07-08T12:11:40Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAxdcElc1DYwyAQ/9F8Q2kgKV4X1PoebcKGtY0xpCFdKhsfyGKid+MTpYviDA
[...]
            =3Jeb
            -----END PGP MESSAGE-----
          fp: CEBD171D5C7B1C5FB960301167AC891FB1FDF3E4
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.7.3
